# tyl-errors

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs  error_context.rs  extensible_categories.rs  retry_logic.rs
src/: category.rs  context.rs  error.rs  lib.rs  retry.rs  settings.rs
tests/: integration_tests.rs
