[package]
name = "tyl-errors"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-errors"
description = "Shared error types and utilities for TYL (The YAML Life) framework"
homepage = "https://github.com/the-yaml-life/tyl-errors"
documentation = "https://docs.rs/tyl-errors"
readme = "README.md"
keywords = ["error", "error-handling", "thiserror", "retry", "classification", "hexagonal"]
categories = ["rust-patterns", "development-tools"]

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"